[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://light.material" type="Material" id=2]
[ext_resource path="res://sprites/bumper.png" type="Texture" id=3]
[ext_resource path="res://sprites/hint_regular.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/player.gd" type="Script" id=6]
[ext_resource path="res://sprites/block.png" type="Texture" id=7]
[ext_resource path="res://scripts/shake.gd" type="Script" id=8]
[ext_resource path="res://shader.tres" type="Shader" id=9]
[ext_resource path="res://sprites/background.png" type="Texture" id=10]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite

func _input(event: InputEvent) -> void:
	if Input.is_action_just_pressed(\"press\"):
		queue_free()"

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.0
bounce = 1.0

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 1.0

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=8]
resource_name = "vzhew-in"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("player/sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.2 ),
"transitions": PoolRealArray( 1, 0.392292, 3.03143 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:contact_monitor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "vzhew-out"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("player/sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.2 ),
"transitions": PoolRealArray( 3.03143, 0.392292, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:contact_monitor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 9 )
shader_param/ca = Vector3( 0, 0, 0 )

[sub_resource type="GDScript" id=11]
script/source = "extends Sprite

onready var scl = Vector2(25.313, 38.813)
onready var screen = scale

#var newscale : Vector2
var newscreen : Vector2
var ratio : Vector2

func _draw():
	newscreen = get_viewport_rect().size
	ratio.x = newscreen.x / screen.x
	ratio.y = newscreen.y / screen.y
	scale = Vector2(scl.x * ratio.x, scl.y * ratio.y)
	print(scale)"

[node name="board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="Node" parent="."]

[node name="play_area" type="Sprite" parent="background"]
modulate = Color( 0.176471, 0.984314, 0.964706, 1 )
material = ExtResource( 2 )
position = Vector2( 540, 594 )
scale = Vector2( 13.5, 13.5 )
texture = ExtResource( 3 )

[node name="ctrl_area" type="Sprite" parent="background"]
material = ExtResource( 2 )
position = Vector2( 540, 1404 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="bumpers" type="Sprite" parent="background"]
visible = false
position = Vector2( 540, 596 )
scale = Vector2( 14, 14 )
z_index = 3
texture = ExtResource( 3 )

[node name="hint" type="Sprite" parent="background"]
visible = false
scale = Vector2( 2.55924, 2.6158 )
texture = ExtResource( 4 )
centered = false
script = SubResource( 1 )

[node name="enemies" type="Node" parent="."]
editor/display_folded = true

[node name="enemy2" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 216, 270 )
physics_material_override = SubResource( 2 )

[node name="enemy3" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 864, 270 )
physics_material_override = SubResource( 3 )

[node name="enemy4" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 216, 918 )
physics_material_override = SubResource( 4 )

[node name="enemy1" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 864, 918 )
physics_material_override = SubResource( 5 )

[node name="player" type="RigidBody2D" parent="."]
self_modulate = Color( 1, 0.494118, 0.494118, 1 )
use_parent_material = true
position = Vector2( 540, 594 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
collision_mask = 6
mode = 3
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="player"]
modulate = Color( 1.60082, 0.345926, 0.345926, 1 )
material = ExtResource( 2 )
use_parent_material = true
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
modulate = Color( 1, 1, 1, 0.425412 )
shape = SubResource( 7 )

[node name="walls" type="Node" parent="."]
editor/display_folded = true

[node name="wall_top" type="StaticBody2D" parent="walls" groups=[
"wall",
]]
position = Vector2( 540, 108 )
collision_layer = 4
collision_mask = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls/wall_top"]
position = Vector2( -540, -54 )
polygon = PoolVector2Array( 1350, -270, 1350, 108, 972, 108, 108, 108, -270, 108, -270, -270 )

[node name="wall_bottom" type="StaticBody2D" parent="walls" groups=[
"wall",
]]
position = Vector2( 540, 1080 )
collision_layer = 4
collision_mask = 11

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="walls/wall_bottom"]
position = Vector2( -540, -1026 )
polygon = PoolVector2Array( 1350, 1350, 1350, 972, 972, 972, 108, 972, -270, 972, -270, 1350 )

[node name="wall_left" type="StaticBody2D" parent="walls" groups=[
"wall",
]]
position = Vector2( 54, 594 )
collision_layer = 4
collision_mask = 11

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="walls/wall_left"]
position = Vector2( -54, -540 )
polygon = PoolVector2Array( 108, -270, 108, 108, 108, 972, 108, 1350, -270, 1350, -270, 3.19083, -270, -270 )

[node name="wall_right" type="StaticBody2D" parent="walls" groups=[
"wall",
]]
position = Vector2( 1026, 594 )
collision_layer = 4
collision_mask = 11

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="walls/wall_right"]
position = Vector2( -1026, -540 )
polygon = PoolVector2Array( 1350, -270, 972, -270, 972, 108, 972, 972, 972, 1350, 1350, 1350 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 8 )

[node name="color_holder" type="Node" parent="."]
editor/display_folded = true

[node name="enemies" type="ColorRect" parent="color_holder"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="player" type="ColorRect" parent="color_holder"]
visible = false
modulate = Color( 1, 0.458824, 0.458824, 1 )
margin_right = 40.0
margin_bottom = 40.0

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/vzhew-in = SubResource( 8 )
anims/vzhew-out = SubResource( 9 )

[node name="shader" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( -3.8147e-06, 0 )
scale = Vector2( 33.75, 60 )
z_index = 5
texture = ExtResource( 10 )
centered = false
script = SubResource( 11 )

[node name="hud" parent="." instance=ExtResource( 11 )]

[connection signal="body_entered" from="player" to="player" method="_on_player_body_entered"]
